--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
       </div>
       <ul class="task-box"></ul>
     </div>
-    <script src="./script.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
